feat(core): Media API
